feat: implement create/run/get/trace/report/demo endpoints
Split orchestrate() into create() + runPipeline() so meeting creation
and agent execution are separate calls, enabling the hackathon demo flow.

Endpoints:
  POST   /api/meetings         → 201 with PENDING meeting (create only)
  POST   /api/meetings/{id}/run → run 6-agent pipeline synchronously
  GET    /api/meetings/demo    → pre-seeded Apollo Hospitals session (no Gemini)
  GET    /api/meetings/{id}    → full session with runs + traces + report
  GET    /api/meetings/{id}/trace  → trace rows for Agent Trace View
  GET    /api/meetings/{id}/report → final report only

Error handling:
  404 via ResourceNotFoundException (meeting not found, report not ready)
  400 via MeetwiseException(msg, 400) (meeting not in PENDING state)
  500 for unexpected failures
  422 for @Valid field violations with per-field error map

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>